# tiktok-data-lake

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO  docker-compose.yml  main.py  pnpm-lock.yaml  pyproject.toml  test_watermark_free.py
src/: autotagging.py  db.py  queue_ocr.py  queue_transcriptions.py  save.py  tagging.py  tasks.py  test.py  test_database_and_download.py
src/backend/: autotagging.py  db.py  tagging.py  tasks.py
src/frontend/: api.py  start_server.py
src/frontend/static/: app.js  styles.css
src/frontend/templates/: index.html
src/frontend/templates/partials/: header.html  ingest-modal.html  pagination.html  search-bar.html  settings-modal.html  sidebar.html  video-grid.html  video-modal.html
src/test_ocr/: easyocr_test.py  paddle_test.py  rapidocr_bytes_test.py  rapidocr_test.py  trocr_test.py
