[project]
name = "tiktok-save"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "memory-profiler>=0.61.0",
    "openai>=2.13.0",
    "playwright==1.52.0",
    "tiktokapi==7.1.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
